# beast-observatory

./: .gitignore  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml
prometheus/: prometheus.yml
